fixed text aligning

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -765,7 +765,7 @@ body {
 .intro--options>a {
     max-width: 250px;
     text-decoration: none;
-    color: #282828;
+    color: #fff;
     -webkit-transition: color .2s ease-in-out;
     transition: color .2s ease-in-out
 }
